force-app/main/default/objects/Email_SMS_Log__c/fields/Status_Deliver__c.field-meta.xml
<CustomField>
    <fullName>Status_Deliver__c</fullName>
    <label>Status Deliver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>