force-app/main/default/objects/Email_SMS_Log__c/fields/Status_JATIS__c.field-meta.xml
<CustomField>
    <fullName>Status_JATIS__c</fullName>
    <label>Status JATIS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>