force-app/main/default/objects/Email_SMS_Log__c/fields/Status_Payment__c.field-meta.xml
<CustomField>
    <fullName>Status_Payment__c</fullName>
    <label>Status Payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>