force-app/main/default/objects/Email_SMS_Log__c/fields/Status_Response__c.field-meta.xml
<CustomField>
    <fullName>Status_Response__c</fullName>
    <formula>IF (  ISBLANK(Survey_Taken__c), 
IF ( TEXT(Status__c) == &apos;Send&apos;, &apos;0 - Not Response&apos;, TEXT(Status__c)) ,
&apos;1 - &apos;&amp;Survey_Taken__r.Status_Response__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Response</label>
    <type>Text</type>
</CustomField>