force-app/main/default/objects/Email_SMS_Log__c/fields/Subject_New_Value__c.field-meta.xml
<CustomField>
    <fullName>Subject_New_Value__c</fullName>
    <label>Subject New Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>