force-app/main/default/objects/Email_SMS_Log__c/fields/Subject_Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Subject_Old_Value__c</fullName>
    <label>Subject Old Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>