force-app/main/default/objects/Email_SMS_Log__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>Email &amp; SMS Log</relationshipLabel>
    <relationshipName>Email_SMS_Log</relationshipName>
    <type>Lookup</type>
</CustomField>