force-app/main/default/objects/Email_SMS_Log__c/fields/Survey_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Survey_DateTime__c</fullName>
    <formula>CreatedDate</formula>
    <label>Survey DateTime</label>
    <type>DateTime</type>
</CustomField>