force-app/main/default/objects/Email_SMS_Log__c/fields/Survey_Send_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Survey_Send_Datetime__c</fullName>
    <formula>CreatedDate</formula>
    <label>Survey Send DateTime</label>
    <type>DateTime</type>
</CustomField>