force-app/main/default/objects/Email_SMS_Log__c/fields/Survey_Taken__c.field-meta.xml
<CustomField>
    <fullName>Survey_Taken__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Taken</label>
    <referenceTo>SurveyTaker__c</referenceTo>
    <relationshipLabel>Email &amp; SMS Log</relationshipLabel>
    <relationshipName>Email_SMS_Log</relationshipName>
    <type>Lookup</type>
</CustomField>