force-app/main/default/objects/Email_SMS_Log__c/fields/Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>Survey_Type__c</fullName>
    <description>ICF : I Ask, I Buy, I Claim, I Complain, I Renew
Non ICF : Thanks Note, Other dan Campaign</description>
    <inlineHelpText>ICF : I Ask, I Buy, I Claim, I Complain, I Renew
Non ICF : Thanks Note, Other dan Campaign</inlineHelpText>
    <label>Survey Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>