force-app/main/default/objects/Email_SMS_Log__c/fields/Survey_URL__c.field-meta.xml
<CustomField>
    <fullName>Survey_URL__c</fullName>
    <label>Survey_URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>