force-app/main/default/objects/Email_SMS_Log__c/fields/Taken__c.field-meta.xml
<CustomField>
    <fullName>Taken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taken</label>
    <type>Checkbox</type>
</CustomField>