force-app/main/default/objects/Email_SMS_Log__c/fields/Template_Email__c.field-meta.xml
<CustomField>
    <fullName>Template_Email__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template Email</label>
    <referenceTo>Email_SMS_Template__c</referenceTo>
    <relationshipLabel>Email &amp; SMS Log (Template Email)</relationshipLabel>
    <relationshipName>Email_SMS_Log_Email</relationshipName>
    <type>Lookup</type>
</CustomField>