force-app/main/default/objects/Email_SMS_Log__c/fields/Template_Id_JATIS__c.field-meta.xml
<CustomField>
    <fullName>Template_Id_JATIS__c</fullName>
    <label>Template Id JATIS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>