force-app/main/default/objects/Email_SMS_Log__c/fields/Template_SMS__c.field-meta.xml
<CustomField>
    <fullName>Template_SMS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template SMS</label>
    <referenceTo>Email_SMS_Template__c</referenceTo>
    <relationshipLabel>Email &amp; SMS Log (Template SMS)</relationshipLabel>
    <relationshipName>Email_SMS_Log_SMS</relationshipName>
    <type>Lookup</type>
</CustomField>