force-app/main/default/objects/Email_SMS_Log__c/fields/Touch_Point__c.field-meta.xml
<CustomField>
    <fullName>Touch_Point__c</fullName>
    <label>Touch Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>