force-app/main/default/objects/Email_SMS_Log__c/fields/TouchPoint_for_Report__c.field-meta.xml
<CustomField>
    <fullName>TouchPoint_for_Report__c</fullName>
    <formula>IF(TEXT(Case__r.Origin)=&apos;Email&apos;,&apos;03. Email&apos;,
IF(TEXT(Case__r.Origin)=&apos;Phone&apos;,&apos;01. Call Center&apos;,
IF(TEXT(Case__r.Origin)=&apos;Walk-In&apos;,&apos;02. Customer Service&apos;,
IF((TEXT(Case__r.Origin)=&apos;Twitter&apos; || TEXT(Case__r.Origin)=&apos;Facebook&apos; || TEXT(Case__r.Origin)=&apos;Instagram&apos;),&apos;05. Social Media&apos;,
IF((TEXT(Case__r.Origin)=&apos;Web&apos; || TEXT(Case__r.Origin)=&apos;Facebook Messenger&apos; || TEXT(Case__r.Origin)=&apos;WhatsApp&apos; || TEXT(Case__r.Origin)=&apos;Chatbot&apos;),&apos;04. Live Chat&apos;,
IF((TEXT(Case__r.Origin)=&apos;Chatter Answers&apos; || TEXT(Case__r.Origin)=&apos;RM&apos; || TEXT(Case__r.Origin)=&apos;Facebook Syariah&apos; || TEXT(Case__r.Origin)=&apos;WhatsApp Easy Claim&apos; || TEXT(Case__r.Origin)=&apos;CR (Customer Retention)&apos; || TEXT(Case__r.Origin)=&apos;Customer Portal&apos; || TEXT(Case__r.Origin)=&apos;Welcome Call&apos; || TEXT(Case__r.Origin)=&apos;OH (Operation Helpdesk)&apos; || TEXT(Case__r.Origin)=&apos;Phone - Data Callback&apos; || TEXT(Case__r.Origin)=&apos;Phone - Outbound Call&apos; || TEXT(Case__r.Origin)=&apos;LinkedIn&apos; || TEXT(Case__r.Origin)=&apos;YouTube&apos;),&apos;Others&apos;,&apos;-&apos;))))))</formula>
    <label>TouchPoint for Report</label>
    <type>Text</type>
</CustomField>