force-app/main/default/objects/Email_SMS_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>CCC, Non-CCC</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CCC</fullName>
            </value>
            <value>
                <fullName>Non-CCC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>