force-app/main/default/objects/Email_SMS_Log__c/fields/Type_Policy_Service__c.field-meta.xml
<CustomField>
    <fullName>Type_Policy_Service__c</fullName>
    <formula>IF(AND(ISPICKVAL(Entity__c , &apos;AMFS&apos;), NOT(ISNULL(Payment_Code__c))), 
 IF(Payment_Code__c == &apos;PC04&apos;, 
  &apos;Penarikan Dana Sebagian&apos;, 
  IF(OR(Payment_Code__c == &apos;PC05&apos;, Payment_Code__c == &apos;PC10&apos;, Payment_Code__c == &apos;PC12&apos;), 
   &apos;Penutupan Polis&apos;, 
   &apos;&apos;)
 ), 
 &apos;&apos;
)</formula>
    <label>Type Policy Service</label>
    <type>Text</type>
</CustomField>