force-app/main/default/objects/Email_SMS_Log__c/fields/Type_Send__c.field-meta.xml
<CustomField>
    <fullName>Type_Send__c</fullName>
    <formula>IF (  ISPICKVAL(Category__c , &apos;Ereciept-AMFS&apos;),
IF (
 NOT( ISBLANK( Mobile__c ) ) ,
&apos;SMS&apos;,
&apos;Email&apos;
),
&apos;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Send</label>
    <type>Text</type>
</CustomField>