force-app/main/default/objects/Email_SMS_Log__c/fields/Updated_Contact_Flag__c.field-meta.xml
<CustomField>
    <fullName>Updated_Contact_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated Contact Flag</label>
    <type>Checkbox</type>
</CustomField>