force-app/main/default/objects/Email_SMS_Log__c/fields/Use_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Use_Contact_Email__c</fullName>
    <formula>IF (ISBLANK(Contact__c), FALSE, 
IF (ISBLANK(Contact__r.Email), FALSE, 
IF (!ISBLANK(Contact__r.EmailBouncedDate), FALSE, 
IF (Contact__r.Email != Email__c, FALSE, 
TRUE))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Use Contact Email</label>
    <type>Checkbox</type>
</CustomField>