force-app/main/default/objects/Email_SMS_Log__c/fields/Username_JATIS__c.field-meta.xml
<CustomField>
    <fullName>Username_JATIS__c</fullName>
    <label>Username JATIS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>