force-app/main/default/objects/Email_SMS_Log__c/fields/WalkIN_Survey_URL__c.field-meta.xml
<CustomField>
    <fullName>WalkIN_Survey_URL__c</fullName>
    <formula>SUBSTITUTE(Survey_URL__c ,&apos;http://axaindonesia.force.com/survey/&apos;, &apos;https://axaid-ccc.my.salesforce.com/apex/&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WalkIN Survey URL</label>
    <type>Text</type>
</CustomField>