force-app/main/default/objects/Email_SMS_Log__c/listViews/All_Cancel_tgl_10_Feb_AMFS_ICF.listView-meta.xml
<ListView>
    <fullName>All_Cancel_tgl_10_Feb_AMFS_ICF</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Contact__c</columns>
    <columns>Policy_Number__c</columns>
    <columns>Category__c</columns>
    <columns>Type__c</columns>
    <columns>Entity__c</columns>
    <columns>Method__c</columns>
    <columns>Email__c</columns>
    <columns>Mobile__c</columns>
    <columns>Request_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Ext_ID_IDAS__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Date__c</field>
        <operation>equals</operation>
        <value>2/10/2017</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Cancel</value>
    </filters>
    <filters>
        <field>Entity__c</field>
        <operation>equals</operation>
        <value>AMFS</value>
    </filters>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>ICF</value>
    </filters>
    <label>All Cancel tgl 10 Feb AMFS - ICF</label>
</ListView>