force-app/main/default/objects/Email_SMS_Log__c/listViews/All_Draft_Email_Blank.listView-meta.xml
<ListView>
    <fullName>All_Draft_Email_Blank</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Contact__c</columns>
    <columns>Policy_Number__c</columns>
    <columns>Category__c</columns>
    <columns>Entity__c</columns>
    <columns>Method__c</columns>
    <columns>Email__c</columns>
    <columns>Mobile__c</columns>
    <columns>Request_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Ext_ID_IDAS__c</columns>
    <columns>Email_Text__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <filters>
        <field>Entity__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All - Draft - Email Blank</label>
    <language>en_US</language>
</ListView>