force-app/main/default/objects/Email_SMS_Log__c/listViews/All_Entity_Blank.listView-meta.xml
<ListView>
    <fullName>All_Entity_Blank</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Contact__c</columns>
    <columns>Policy_Number__c</columns>
    <columns>Category__c</columns>
    <columns>Type__c</columns>
    <columns>Entity__c</columns>
    <columns>Method__c</columns>
    <columns>Email__c</columns>
    <columns>Mobile__c</columns>
    <columns>Request_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Ext_ID_IDAS__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Entity__c</field>
        <operation>equals</operation>
    </filters>
    <label>All - Entity Blank</label>
    <language>en_US</language>
</ListView>