force-app/main/default/objects/Email_SMS_Log__c/listViews/All_SMS_This_Week_Modify_ICF.listView-meta.xml
<ListView>
    <fullName>All_SMS_This_Week_Modify_ICF</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Contact__c</columns>
    <columns>Policy_Number__c</columns>
    <columns>Category__c</columns>
    <columns>Type__c</columns>
    <columns>Entity__c</columns>
    <columns>Method__c</columns>
    <columns>Email__c</columns>
    <columns>Mobile__c</columns>
    <columns>Request_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Ext_ID_IDAS__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <filters>
        <field>Method__c</field>
        <operation>equals</operation>
        <value>SMS</value>
    </filters>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>ICF</value>
    </filters>
    <label>All - SMS - This Week Modify - ICF</label>
    <language>en_US</language>
</ListView>