force-app/main/default/objects/Email_SMS_Log__c/listViews/All_This_Month_Non_CCC.listView-meta.xml
<ListView>
    <fullName>All_This_Month_Non_CCC</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Contact__c</columns>
    <columns>Policy_Number__c</columns>
    <columns>Category__c</columns>
    <columns>Type__c</columns>
    <columns>Entity__c</columns>
    <columns>Method__c</columns>
    <columns>Email__c</columns>
    <columns>Mobile__c</columns>
    <columns>Request_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Ext_ID_IDAS__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Non-CCC</value>
    </filters>
    <label>All - This Month Non CCC</label>
    <language>en_US</language>
</ListView>